<resources>
    <string name="app_name">Burning_up</string>
    <!--  로그인  -->
    <string name="edt_id_u">ID</string>
    <string name="edt_pw_u">PW</string>
    <string name="btn_login_u">LOGIN</string>
    <string name="btn_join_u">사용자 회원가입</string>
    <string name="btn_join_m">관리자 회원가입</string>
    <string name="tv_title">Login</string>

    <!--  유저 회원가입  -->
    <string name="edt_joinid_u">ID를 입력해주세요</string>
    <string name="edt_joinpw_u">비밀번호를 입력해주세요</string>
    <string name="edt_name_u">이름을 입력해주세요</string>
    <string name="edt_birth_u">생년월일을 입력하세요</string>
    <string name="edt_tel_u">연락처를 입력하세요</string>
    <string name="radio_man">남</string>
    <string name="radio_woman">여</string>
    <string name="btn_joinok_u">가입하기</string>
    <string name="btn_joincancel_u">취소</string>

    <!--  관리자 회원가입  -->
    <string name="edt_joinid_m">ID를 입력해주세요</string>
    <string name="edt_joinpw_m">비밀번호를 입력해주세요</string>
    <string name="edt_bdname_m">건물명을 입력해주세요</string>
    <string name="edt_address_m">주소를 입력해주세요</string>
    <string name="edt_mngname_m">관리인이름을 입력해주세요</string>
    <string name="edt_mngnumber_m">관리자번호를 입력해주세요</string>
    <string name="btn_joinok_m">가입하기</string>
    <string name="btn_joincancel_m">취소</string>
    <!--  유저 메인  -->
    <string name="btn_freBD">자주가는 건물</string>
    <string name="btn_BDinfo">건물 정보</string>
    <string name="btn_alarm_u">소화기 찾기</string>
    <string name="btn_119_u">화재신고</string>
    <!--  관리자 메인  -->
    <string name="btn_FEtag">소화기 태그</string>
    <string name="btn_FEmng">소화기 관리</string>
    <string name="btn_BDmng">건물 관리</string>
    <string name="btn_FEdisposal">소화기 폐기</string>
    <string name="btn_alarm_m">화재 알림</string>
    <string name="btn_119_m">화재 신고</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  관리자 프래그먼트  -->
    <string name="btn_mypage_m">마이페이지</string>
    <string name="btn_fecall">소화기 호출</string>

    <!--  마이페이지  -->
    <string name="tv_my1">관리자정보</string>
    <string name="tv_my2">관리자</string>
    <string name="tv_my3">비밀번호</string>
    <string name="tv_my4">건물명</string>
    <string name="tv_my5">주소</string>
    <string name="tv_my6">연락처</string>
    <string name="tv_mng">이름</string>
    <string name="tv_pw">비밀번호</string>
    <string name="tv_bdname">건물명</string>
    <string name="tv_adr">주소</string>
    <string name="tv_tel">연락처</string>
    <string name="btn_logout">로그아웃</string>
    <string name="btn_update">정보수정</string>

    <!--  관리자 정보수정  -->
    <string name="edt_mngname">이름입력</string>
    <string name="edt_mngpw">비밀번호입력</string>
    <string name="edt_mngtel">전화번호입력</string>
    <string name="btn_updateok">수정완료</string>

    <!--  소화기 관리  -->
    <string name="tv_n">No.</string>
    <string name="tv_place">설치장소</string>
    <string name="tv_date">점검일자</string>
    <string name="tv_check">점검</string>
    <string name="btn_add">추가하기</string>
    <string name="btn_fecheck">소화기 점검</string>
    <string name="btn_fediposal">소화기 폐기</string>
    <string name="btn_feadd">QR로 불러오기</string>
    <!-- list  -->
    <string name="tv_num">1</string>
    <string name="tv_place1">3층 강의실B</string>
    <string name="tv_date1">2021.07.02</string>
    <string name="btn_check">점검하기</string>

    <!--  소화기 점검  -->
    <string name="btn_checkok">점검완료</string>
    <string name="tv_nomal">정상</string>
    <string name="tv_unnomal">비정상</string>

    <!--  소화기 추가  -->

    <string name="tv_fenum">소화기 고유번호</string>
    <string name="tv_fepro">소화기 제조일</string>
    <string name="tv_fedate">소화기 유통기한</string>
    <string name="edt_feplace">소화기 설치 장소</string>
    <string name="btn_cancleadd">취소</string>
    <string name="btn_addfe">등록하기</string>

    <!--  소화기 점검 확인  -->
    <string name="btn_fecheckok">확인</string>

    <!--  소화기 폐기  -->
    <string name="btn_disposal">폐기 신청</string>
    <string name="edt_fenum">고유번호 입력</string>
    <string name="edt_wishday">수거 희망일 입력</string>
    <string name="tv_num4"></string>
    <string name="tv_fenum4"></string>
    <string name="tv_hopeday"></string>
    <string name="tv_why"></string>
    <string name="btn_home">돌아가기</string>

    <!--  건물 단면도  -->
    <string name="tv_floar3">3층</string>
    <string name="btn_change">수정</string>
    <string name="btn_delete">삭제</string>

    <!--  사용자 프래그1   -->
    <string name="btn_findfe">소화기 찾기</string>
    <!--  소화기 찾기 화면  -->
    <string name="btn_stop">소화기 찾기중지</string>

    <string name="tv_mngst">양호</string>

    <string name="tv_board">소방훈련 안내</string>
</resources>