<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity_M">

    <Button
        android:id="@+id/btn_FEtag"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_FEtag"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_BDmng"
        app:layout_constraintEnd_toStartOf="@+id/btn_FEmng"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_FF_m"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_FF_m"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_FEdisposal"
        app:layout_constraintStart_toStartOf="@+id/btn_FEdisposal"
        app:layout_constraintTop_toBottomOf="@+id/btn_FEdisposal" />

    <Button
        android:id="@+id/btn_alarm_m"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_alarm_m"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_BDmng"
        app:layout_constraintStart_toStartOf="@+id/btn_BDmng"
        app:layout_constraintTop_toBottomOf="@+id/btn_BDmng" />

    <Button
        android:id="@+id/btn_FEdisposal"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_FEdisposal"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_FF_m"
        app:layout_constraintEnd_toEndOf="@+id/btn_FEmng"
        app:layout_constraintStart_toStartOf="@+id/btn_FEmng"
        app:layout_constraintTop_toBottomOf="@+id/btn_FEmng" />

    <Button
        android:id="@+id/btn_BDmng"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_BDmng"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_alarm_m"
        app:layout_constraintEnd_toEndOf="@+id/btn_FEtag"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btn_FEtag"
        app:layout_constraintTop_toBottomOf="@+id/btn_FEtag" />

    <Button
        android:id="@+id/btn_FEmng"
        android:layout_width="94dp"
        android:layout_height="103dp"
        android:text="@string/btn_FEmng"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_FEdisposal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_FEtag"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>