<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FE_add">

    <TextView
        android:id="@+id/tv_feplace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_feplace"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView45"
        app:layout_constraintTop_toBottomOf="@+id/textView45" />

    <TextView
        android:id="@+id/tv_fenum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fenum"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/textView42" />

    <TextView
        android:id="@+id/tv_fepro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fepro"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/textView43" />

    <TextView
        android:id="@+id/tv_fedate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fedate"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/textView44" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="소화기 제조일:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView42"
        app:layout_constraintTop_toBottomOf="@+id/tv_fenum" />

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="소화기 유통기한:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView43"
        app:layout_constraintTop_toBottomOf="@+id/tv_fepro" />

    <TextView
        android:id="@+id/textView45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="소화기 설치 장소:"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView44"
        app:layout_constraintTop_toBottomOf="@+id/tv_fedate" />

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="235dp"
        android:layout_marginRight="235dp"
        android:text="소화기 고유번호:"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancleadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginLeft="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="90dp"
        android:text="@string/btn_cancleadd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_addfe"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_addfe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:text="@string/btn_addfe"
        app:layout_constraintBottom_toBottomOf="@+id/btn_cancleadd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_cancleadd"
        app:layout_constraintTop_toTopOf="@+id/btn_cancleadd" />
</androidx.constraintlayout.widget.ConstraintLayout>